added azure active directory module and changed to kotlin

--- a/todo-api/build.gradle
+++ b/todo-api/build.gradle
@@ -34,10 +34,12 @@ repositories {
 
 
 ext {
+	azureVersion = '0.2.0'
 	springCloudVersion = 'Dalston.SR4'
 }
 
 dependencies {
+	compile('com.microsoft.azure:azure-active-directory-spring-boot-starter')
 	compile('org.springframework.cloud:spring-cloud-starter-oauth2')
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
 	compile('org.springframework.boot:spring-boot-starter-data-rest')
@@ -49,6 +51,7 @@ dependencies {
 
 dependencyManagement {
 	imports {
+		mavenBom "com.microsoft.azure:azure-spring-boot-bom:${azureVersion}"
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
