--- a/todo-api/docker/docker-compose.yml
+++ b/todo-api/docker/docker-compose.yml
@@ -1,14 +1,18 @@
+version: "3.1"
 mongodb:
     image: mongo
     ports:
         - "27017:27017"
 
+#The image to see the mongodb with test data
 mongo-seed:
     build: ./mongo-seed
+    image: mongo-seed
     links:
         - mongodb
 
 todo-api:
+    build: ./todo-api
     image: todo-api
     ports:
         - "80:8080"
