--- a/todo-api/docker/todo-api/Dockerfile
+++ b/todo-api/docker/todo-api/Dockerfile
@@ -37,4 +37,7 @@ WORKDIR /app
 
 COPY --from=builder /app/dist/ ./
 
+ENV SPRING_APPLICATION_JSON = "ADD SPRING EXTERNAL CONFIG HERE"
+
 ENTRYPOINT ["bin/run"]
+EXPOSE 8080
