--- a/todo-api/.gitignore
+++ b/todo-api/.gitignore
@@ -1,5 +1,6 @@
 .gradle
-/build/
+build/
+out/
 !gradle/wrapper/gradle-wrapper.jar
 
 ### STS ###
@@ -16,10 +17,3 @@
 *.iml
 *.ipr
 
-### NetBeans ###
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
