--- a/todo-api/docker/mongo-seed/Dockerfile
+++ b/todo-api/docker/mongo-seed/Dockerfile
@@ -1,4 +1,4 @@
 FROM mongo
 
-COPY test-todoItems.json /test-todoItems.json
-CMD mongoimport --host mongodb --db reach-engine --collection todos --type json --file /test-todoItems.json --jsonArray
+COPY test-data.json /test-data.json
+CMD mongoimport --host mongodb --db reach-engine --collection todos --type json --file /test-data.json --jsonArray
