--- a/docker/todo-api/Dockerfile
+++ b/docker/todo-api/Dockerfile
@@ -2,7 +2,7 @@ FROM openjdk:8-jre-alpine
 
 WORKDIR /app
 
-COPY ../../todo-api/build/libs/todo-api-*-SNAPTSHOT.jar todo-api.jar
+COPY todo-api-0.0.1-SNAPSHOT.jar todo-api.jar
 ENV SPRING_APPLICATION_JSON \
     'ADD EXTERNAL SPRING CONFIG HERE'
 
