updated build.gradle to copy .jar to ../docker/todo-api and refactored todo-api

--- a/todo-api/build.gradle
+++ b/todo-api/build.gradle
@@ -55,3 +55,11 @@ dependencyManagement {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
+
+task export(dependsOn: 'bootRepackage', type: Copy) {
+	from('build/libs/') {
+		include '*.jar'
+	}
+	into "$rootProject.projectDir/../docker/todo-api/"
+}
+
