removed the mongo-seed Dockerfile, docker-compose now references the mongodb image with test data in diverdown/mongo-test:v1

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,16 +1,9 @@
 version: "3.1"
 services:
     mongodb:
-        image: mongo
+        image: diverdown/mongo-test:v1 
         ports:
             - "27017:27017"
-
-    #The image to see the mongodb with test data
-    mongo-seed:
-        build: ./mongo-seed
-        image: mongo-seed
-        depends_on:
-            - mongodb
 
     todo-api:
         build: ./todo-api     
