--- a/todo-app/docker/docker-compose.yml
+++ b/todo-app/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.1"
 services:
     mongodb:
-        image: diverdown/mongo-test:v1 
+        image: mongo 
         ports:
             - "27017:27017"
 
