added spring config as ENV in Dockerfile

--- a/todo-app/docker/todo-api/Dockerfile
+++ b/todo-app/docker/todo-api/Dockerfile
@@ -4,6 +4,12 @@ WORKDIR /app
 
 COPY *.jar todo-api.jar
 ENV SPRING_APPLICATION_JSON \
-    'ADD EXTERNAL SPRING CONFIG HERE'
+    '{"server": {"port": 8080}, \
+	"spring": { "data": { "mongodb": \
+    { "uri": "mongodb://localhost:27017","database": "todo-app"}}}, \
+	"AzureAD": {"appId": "add application id from azure ad here", \
+		"identityMetaData": "https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration"}, \
+	"logging": { "level": { "root": "WARN", "org.springframework.web": "DEBUG", \
+	"ca.architech": "DEBUG"}}}'
 
 CMD ["/usr/bin/java", "-jar", "todo-api.jar"]
