removed oauth2 dependency until needed, refactored TodoItem due to mapping issues with mongo.

--- a/todo-app/todo-api/build.gradle
+++ b/todo-app/todo-api/build.gradle
@@ -39,8 +39,8 @@ ext {
 }
 
 dependencies {
-	compile('com.microsoft.azure:azure-active-directory-spring-boot-starter')
-	compile('org.springframework.cloud:spring-cloud-starter-oauth2')
+	//compile('com.microsoft.azure:azure-active-directory-spring-boot-starter')
+	//compile('org.springframework.cloud:spring-cloud-starter-oauth2')
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
 	compile('org.springframework.boot:spring-boot-starter-data-rest')
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}")
