--- a/todo-app/docker-compose.yml
+++ b/todo-app/docker-compose.yml
@@ -4,11 +4,19 @@ services:
         image: mongo 
         ports:
             - "27017:27017"
+        volumes:
+            - "todo-app-db:/data/db"
 
     todo-api:
         build: ./todo-api     
         image: todo-api
         ports:
             - "80:8080"
+        environment:
+            SPRING_APPLICATION_JSON: '{"spring": { "data": {"mongodb": "uri": "mongodb://mongodb:27017", "database": "todo-app"}}}'
+
         depends_on:
             - mongodb
+
+volumes:
+    todo-app-db:
