--- a/todo-app/docker-compose.yml
+++ b/todo-app/docker-compose.yml
@@ -13,7 +13,7 @@ services:
         ports:
             - "80:8080"
         environment:
-            SPRING_APPLICATION_JSON: '{"spring": { "data": {"mongodb": "uri": "mongodb://mongodb:27017", "database": "todo-app"}}}'
+            MONGODB_URL: mongodb:27017
 
         depends_on:
             - mongodb
