moved logging levels to env. updated dockerfile to enable cmd overriding

--- a/todo-app/todo-api/Dockerfile
+++ b/todo-app/todo-api/Dockerfile
@@ -6,4 +6,5 @@ COPY ./build/libs/*.jar todo-api.jar
 
 ENV MONGODB_URL "mongodb:27017"
 
-ENTRYPOINT ["/usr/bin/java", "-jar", "todo-api.jar"]
+ENTRYPOINT ["/usr/bin/java"]
+CMD ["-jar", "todo-api.jar"]
