--- a/todo-app/docker-compose.yml
+++ b/todo-app/docker-compose.yml
@@ -14,6 +14,8 @@ services:
             - "80:8080"
         environment:
             MONGODB_URL: mongodb:27017
+            SPRING_LOG_LEVEL: INFO
+            APP_LOG_LEVEL: DEBUG
 
         depends_on:
             - mongodb
