updated to run full app stack with docker-compose

--- a/todo-app/todo-api/Dockerfile
+++ b/todo-app/todo-api/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY ./build/libs/*.jar todo-api.jar
 
-ENV MONGODB_URL "mongodb:27017"
+ENV MONGODB_URL "localhost:27017"
 
 ENTRYPOINT ["/usr/bin/java"]
 CMD ["-jar", "todo-api.jar"]
