--- a/todo-app/todo-api/build.gradle
+++ b/todo-app/todo-api/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 	compile("org.springframework.boot:spring-boot-starter-data-rest")
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}")
 	compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
+	compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.0")
 	compile("io.springfox:springfox-swagger2:2.7.0")
 	compile("io.springfox:springfox-swagger-ui:2.7.0")
 
