--- a/todo-app/todo-api/src/main/resources/application-development.yml
+++ b/todo-app/todo-api/src/main/resources/application-development.yml
@@ -1,10 +1,14 @@
 server:
-  port: 8080
+    port: 8080
 spring:
   data:
     mongodb:
       uri: mongodb://${MONGODB_URL}
       database: todo-app
+  jackson:
+    serialization:
+      WRITE_DATES_AS_TIMESTAMPS: false
+
 AzureAD:
   appId: ${AZURE_APP_ID}
   identityMetaData: https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration
