--- a/todo-app/user-api/package.json
+++ b/todo-app/user-api/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "user-api",
-  "version": "1.0.0",
-  "description": "Description goes here...",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon src/index.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.16.2"
-  },
-  "devDependencies": {
-    "nodemon": "^1.12.1"
-  }
+    "name": "user-api",
+    "version": "1.0.0",
+    "description": "API that handles user authentication",
+    "main": "./src/index.js",
+    "dependencies": {
+        "body-parser": "^1.18.2",
+        "cookie-parser": "^1.4.3",
+        "express": "^4.16.2",
+        "passport": "^0.4.0",
+        "passport-azure-ad": "^3.0.8"
+    },
+    "devDependencies": {
+        "nodemon": "^1.12.1"
+    },
+    "scripts": {
+        "dev": "nodemon src/index.js"
+    },
+    "author": "",
+    "license": "ISC"
 }
