--- a/todo-app/todo-api-java/src/main/resources/application-development.yml
+++ b/todo-app/todo-api-java/src/main/resources/application-development.yml
@@ -11,7 +11,7 @@ spring:
 
 AzureAD:
   appId: ${AZURE_APP_ID}
-  identityMetaData: https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration
+  identityMetaData: ${AD_IDENTITY_META_DATA_URL}
 logging:
   level:
     root: WARN
