--- a/todo-app/user-api/package.json
+++ b/todo-app/user-api/package.json
@@ -1,20 +1,17 @@
 {
   "name": "user-api",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "API for managing users",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "dev": "nodemon src/index.js"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "cookie-parser": "^1.4.3",
-    "debug": "^2.6.9",
-    "express": "^4.15.5",
-    "jade": "^1.11.0",
-    "mongoose": "^4.13.5",
-    "morgan": "^1.9.0",
-    "passport": "^0.4.0",
-    "passport-azure-ad": "^3.0.8",
-    "serve-favicon": "^2.4.5"
+    "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.1"
   }
 }
