--- a/todo-app/user-api/package.json
+++ b/todo-app/user-api/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "base-64": "^0.1.0",
+    "express": "^4.16.2",
+    "utf8": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
