--- a/todo-app/todo-ui/package.json
+++ b/todo-app/todo-ui/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "bootstrap": "3",
     "cross-fetch": "^1.1.1",
     "express": "^4.16.2",
     "lodash": "^4.17.4",
