--- a/todo-app/user-api/package.json
+++ b/todo-app/user-api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "base-64": "^0.1.0",
     "express": "^4.16.2",
+    "mongoose": "^4.13.6",
     "utf8": "^3.0.0"
   },
   "devDependencies": {
