--- a/todo-app/user-api/package.json
+++ b/todo-app/user-api/package.json
@@ -12,7 +12,8 @@
     "base-64": "^0.1.0",
     "express": "^4.16.2",
     "mongoose": "^4.13.6",
-    "utf8": "^3.0.0"
+    "utf8": "^3.0.0",
+    "winston": "^2.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
