--- a/todo-app/todo-ui/package.json
+++ b/todo-app/todo-ui/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
+    "react-select": "^1.1.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
