--- a/todo-app/user-api/package.json
+++ b/todo-app/user-api/package.json
@@ -12,6 +12,8 @@
     "base-64": "^0.1.0",
     "express": "^4.16.2",
     "mongoose": "^4.13.6",
+    "passport": "^0.4.0",
+    "passport-azure-ad": "^3.0.8",
     "utf8": "^3.0.0",
     "winston": "^2.4.0"
   },
