--- a/todo-app/todo-ui/nginx.conf
+++ b/todo-app/todo-ui/nginx.conf
@@ -5,13 +5,13 @@ server {
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
 
-    location /api/todo/ {
-        proxy_pass http://docker.for.mac.localhost:8080/;
+    location /api/todos/ {
+        #proxy_pass http://docker.for.mac.localhost:8080/;
         #proxy_pass http://docker.for.win.localhost:8080/;
-        #proxy_pass http://localhost:8080/;
-        #proxy_pass http://todo-api:8080/;
-        proxy_set_header Host            $host;
+        proxy_pass http://todo-api:8080/api/todos/;
+        proxy_set_header Host $host;
         proxy_redirect default;
+        add_header 'Access-Control-Allow-Origin' '*';
     }
 
     location / {
@@ -31,26 +31,4 @@ server {
         root   /usr/share/nginx/html;
     }
 
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #
-    #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
-
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
-    #location ~ \.php$ {
-    #    root           html;
-    #    fastcgi_pass   127.0.0.1:9000;
-    #    fastcgi_index  index.php;
-    #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-    #    include        fastcgi_params;
-    #}
-
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
 }
