--- a/todo-app/todo-ui/docker-compose.yml
+++ b/todo-app/todo-ui/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
     mongodb:
-        image: mongo 
+        image: mongo
         ports:
             - "27017:27017"
         volumes:
@@ -10,7 +10,7 @@ services:
 
     todo-api:
         build:
-            context: ./todo-api-java    
+            context: ../todo-api-java
         image: todo-api
         ports:
             - "8080:8080"
@@ -18,7 +18,7 @@ services:
             MONGODB_URL: mongodb:27017
             SPRING_LOG_LEVEL: INFO
             APP_LOG_LEVEL: DEBUG
-            ALLOWED_ORIGINS: '*'
+#            ALLOWED_ORIGINS: '*'
             AZURE_APP_ID: 'ADD APP ID HERE'
             AD_IDENTITY_META_DATA_URL: https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration=
         depends_on:
@@ -29,16 +29,12 @@ services:
         ports:
             - "80:80"
         volumes:
-            - ./todo-ui/nginx.conf:/etc/nginx/conf.d/default.conf
-#        networks:
-#            hostnet: {}
+            - ./nginx.conf:/etc/nginx/conf.d/default.conf
+        depends_on:
+            - todo-api
+
 volumes:
     todo-app-data:
         external: true
     todo-app-config-data:
         external: true
-
-#networks:
-#    hostnet:
-#        external:
-#            name: host
