--- a/todo-app/user-api/package.json
+++ b/todo-app/user-api/package.json
@@ -19,6 +19,10 @@
     "winston": "^2.4.0"
   },
   "devDependencies": {
-    "nodemon": "^1.12.1"
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1",
+    "nodemon": "^1.12.1",
+    "proxyquire": "^1.8.0",
+    "sinon": "^4.1.2"
   }
 }
