--- a/todo-app/todo-ui/nginx.conf
+++ b/todo-app/todo-ui/nginx.conf
@@ -1,13 +1,12 @@
 server {
     listen       80;
-    server_name  localhost;
+    root /app;
+    index index.html;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
 
     location /api/todos/ {
-        #proxy_pass http://docker.for.mac.localhost:8080/;
-        #proxy_pass http://docker.for.win.localhost:8080/;
         proxy_pass http://todo-api:8080/api/todos/;
         proxy_set_header Host $host;
         proxy_redirect default;
@@ -15,11 +14,7 @@ server {
     }
 
     location / {
-        proxy_pass http://docker.for.mac.localhost:3000/;
-        proxy_set_header Host            $host;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        try_files $uri /index.html = 404;
     }
 
     #error_page  404              /404.html;
