--- a/todo-app/todo-ui/docker-compose.build.yml
+++ b/todo-app/todo-ui/docker-compose.build.yml
@@ -1,3 +1,6 @@
+# Merge this file with docker-compose to be build and run the todo-ui container
+# `docker-compose -f docker-compose.yml -f docker-compose.build.yml build`
+# `docker-compose -f docker-compose.yml -f docker-compose.build.yml up --scale nginx=0`
 version: "3"
 services:
   todo-ui:
