--- a/todo-app/todo-ui/Dockerfile
+++ b/todo-app/todo-ui/Dockerfile
@@ -1,35 +1,28 @@
 #Based on the multi-stage build example by codefresh.io
 #https://codefresh.io/blog/node_docker_multistage/
 
-# ---- Base Node ----
-FROM node:8.9.1-alpine AS base
+# ---- Build Node ----
+FROM node:8.9.1-alpine AS build
 # set working directory
 WORKDIR /root/todo-app
 # Set tini as entrypoint
 ENTRYPOINT ["/sbin/tini", "--"]
-# copy project file
+# copy package files as indicator if layer with dependies should re-run.
 COPY ./package.json .
 COPY ./yarn.lock .
- 
-#
-# ---- Dependencies ----
-FROM base AS dependencies
-# install yarn and dependencies
+
+# install yarn and project dependencies
 RUN npm i -g yarn@1.3.2 && yarn install
 
- 
-#
-# ---- Test and Build----
-# run linters, setup and tests
-FROM dependencies AS build
+# copy the rest of the project, test and build
 COPY . .
 RUN  CI=true yarn test && yarn build
 
 #
-# ---- Release ----
+# ---- Release Node ----
 FROM nginx:1.13.7 AS release
 WORKDIR /app
-# copy production build output
+# copy production build output from build node
 COPY --from=build /root/todo-app/build .
 
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
