--- a/todo-app/user-api/package.json
+++ b/todo-app/user-api/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "http-status-codes": "^1.3.0",
     "mongoose": "^4.13.6",
     "passport": "^0.4.0",
     "passport-azure-ad": "^3.0.8",
