--- a/platform/azure-build-server/ansible/build-server.yml
+++ b/platform/azure-build-server/ansible/build-server.yml
@@ -1,9 +1,11 @@
 ---
-- name: Setup Jenkins/SonarQube build server
+- name: Setup Jenkins build server
   hosts: all
   vars:
     nginx_port: 80
   pre_tasks:
+  # These two pre_tasks are required to be able to install newer version on MySQL on CentOS 7
+  # since SonarQube requires MySQL 5.6+ and CentOS 7 comes with MySQL 5.5
     - name: Install the MySQL repo.
       become: yes
       yum:
@@ -26,6 +28,9 @@
     - { role: common, become: yes }
     - { role: nginx, become: yes }
     - { role: geerlingguy.java, java_packages: "java-1.8.0-openjdk", become: yes }
-    - { role: geerlingguy.jenkins, jenkins_version: "2.93", jenkins_admin_username: "admin", jenkins_admin_password: "admin", jenkins_plugins: ["git", "build-pipeline-plugin", "blueocean", "kubernetes", "kubernetes-cd", "azure-acs", "sonar"], jenkins_plugins_state: present, become: yes }
     - { role: geerlingguy.mysql, become: yes }
     - { role: sonar }
+    - { role: geerlingguy.jenkins, jenkins_version: "2.93", jenkins_admin_username: "admin", jenkins_admin_password: "admin", jenkins_plugins: ["git", "build-pipeline-plugin", "blueocean", "kubernetes", "kubernetes-cd", "azure-acs", "sonar"], jenkins_plugins_state: present, become: yes }
+    - { role: configure-jenkins, become: yes }
+    - { role: kubectl, become: yes }
+    - { role: docker, become: yes }
