--- a/todo-app/user-api/package.json
+++ b/todo-app/user-api/package.json
@@ -18,6 +18,8 @@
     "mongoose": "^4.13.6",
     "passport": "^0.4.0",
     "passport-azure-ad": "^3.0.8",
+    "swagger-jsdoc": "^1.9.7",
+    "swagger-ui-express": "^2.0.11",
     "utf8": "^3.0.0",
     "winston": "^2.4.0"
   },
