Updated swagger documentation

--- a/todo-app/user-api/package.json
+++ b/todo-app/user-api/package.json
@@ -4,6 +4,7 @@
   "description": "API for managing users",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "test": "mocha"
   },
