Added Jenkinsfile and Integration testing container for todo-api.
Jenkinsfile defines process to build and test containers, currently mainly leveraging docker-compose. A test Dockerfile was created to run integration tests from and appropriate docker-compose file added to support the integration tests container.

Tests pass. Added Test to conditionally fail

--- a/todo-app/todo-api-java/docker-compose.build.yml
+++ b/todo-app/todo-api-java/docker-compose.build.yml
@@ -1,5 +1,5 @@
-# Merge this file with docker-compose to be build and run the todo-api container
-# `docker-compose -f docker-compose.yml -f docker-compose.build.yml build --no-cache`
+# Merge this file with docker-compose to build and run the todo-api container
+# `docker-compose -f docker-compose.yml -f docker-compose.build.yml build`
 # `docker-compose -f docker-compose.yml -f docker-compose.build.yml up`
 version: "3"
 services:
