adding changes for Prometheus deployment & K8s first deployment of todo app

--- a/todo-app/todo-ui/docker-compose.yml
+++ b/todo-app/todo-ui/docker-compose.yml
@@ -35,6 +35,6 @@ services:
 
 volumes:
     todo-app-data:
-        external: true
+        # external: true
     todo-app-config-data:
-        external: true
+        # external: true
