--- a/todo-app/todo-api-java/Jenkinsfile
+++ b/todo-app/todo-api-java/Jenkinsfile
@@ -7,6 +7,8 @@
   - `scm-credentials` : SSH username (git) and private key to access git. Used when testing pipeline script directly in Jenkins
  Required Jobs:
   - `QA-Tests` : Job to execute tests on all components in a QA environment.
+ Required Parameters (under "This job is parameterized"):
+  - `CleanWorkspace` : Boolean. Default to unchecked.
 */
 
 node {
@@ -16,36 +18,49 @@ node {
 
     def buildEnv;
 
-    stage('Checkout') { // for display purposes
+    stage('Checkout') {
+
+        if (params.CleanWorkspace) {
+            echo "Cleaning Workspace"
+            deleteDir()
+        }
+
+        echo "Checkout project"
         // Checkout source from the same Git repo/branch this Jenkinsfile resides in.
-        //checkout scm
+        checkout scm
 
         // Checkout source from a specific Git repository
-        git branch: "$GIT_BRANCH", credentialsId: 'scm-credentials', url: 'git@bitbucket.org:architech/k8s-fundamentals.git'
+//        git branch: "$GIT_BRANCH", credentialsId: 'scm-credentials', url: 'git@bitbucket.org:architech/k8s-fundamentals.git'
         GIT_REVISION = sh (
                 script: 'git rev-parse --short HEAD',
                 returnStdout: true
         ).trim()
+
+        echo "Checked out git commit ${GIT_REVISION}"
 
         // Desclare versions to use in tags later on.
         IMAGE_FULL_VERSION = "${PROJECT_VERSION}_${GIT_REVISION}"
         IMAGE_SEMVER = "${PROJECT_VERSION}"
     }
     stage('Test') {
+        def projectName = "todoapi${env.BUILD_NUMBER}";
 
         try {
-            sh "docker-compose -f $PROJECT_PATH/docker-compose.test.yml -p todoapp run -e FAIL_TESTS=false todo-api-test"
+            echo "Starting integration tests"
+            sh "docker-compose -f $PROJECT_PATH/docker-compose.test.yml -p $projectName run -e FAIL_TESTS=false todo-api-test"
         } finally {
             echo "Shutting down docker-compose environment"
-            sh "docker-compose -f $PROJECT_PATH/docker-compose.test.yml -p todoapp down"
+            sh "docker-compose -f $PROJECT_PATH/docker-compose.test.yml -p $projectName down"
         }
     }
 
     stage('Build') {
+        echo "Building image ${PROJECT_IMAGE_NAME}"
         buildEnv = docker.build(PROJECT_IMAGE_NAME,PROJECT_PATH)
     }
 
     stage('QA Image Push') {
+        echo "Pushing QA tags of image to docker registry"
         docker.withRegistry('https://registry.hub.docker.com', 'docker-hub-credentials') {
             QA_IMAGE_FULL_VERSION = "qa_${IMAGE_FULL_VERSION}"
             buildEnv.push(QA_IMAGE_FULL_VERSION)
@@ -59,6 +74,7 @@ node {
     }
 
     stage('QA Test') {
+        echo "Spawning Job to run functional testing on all components in QA environment"
         try {
             build job: 'QA-Tests',
                     parameters:
@@ -72,6 +88,7 @@ node {
     }
 
     stage('Prod Image Push') {
+        echo "Pushing Production-ready tags to docker registry"
         docker.withRegistry('https://registry.hub.docker.com', 'docker-hub-credentials') {
             PROD_IMAGE_FULL_VERSION = "${IMAGE_FULL_VERSION}"
             buildEnv.push(PROD_IMAGE_FULL_VERSION)
