Ignorefile updated. Removed redundant  entry.
Remove the .idea entry since it's covered by the generic entry to ignore all hidden folders

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,12 @@
 .*/
 
 *.jar
-.idea
+
+# Mac Specific files
+.DS_Store*
+
+# Windows files
+Thumbs.db
 
 !platform/azure-build-server/keys/README.md
 platform/azure-build-server/keys/*
