Optimized dependency downloads when leveraging multistage builds on todo-api
Dependencies will now only download if there is a change to the build.gradle file which, while isn't perfect, is a huge improvement in general as this file isn't edited as often when compared to the rest of the project.

--- a/todo-app/todo-api-java/Dockerfile.test
+++ b/todo-app/todo-api-java/Dockerfile.test
@@ -1,20 +1,22 @@
 # --- Build ---
 FROM openjdk:8-jdk-alpine as BUILD
 
-ENV FAIL_TESTS false
-
-WORKDIR app_build
-
 COPY gradle ./gradle
 COPY gradlew .
 
+# Layer to download gradle
 RUN ./gradlew
 
 COPY build.gradle .
 
-RUN ./gradlew clean
+# Download dependencies
+RUN ./gradlew getDependencies -x test --continue
+
+RUN echo 'Dependencies Downloaded'
 
 COPY src ./src
+
+ENV FAIL_TESTS false
 
 ENTRYPOINT ["./gradlew"]
 
