Jenkinsfile builds the todo-api-test container everytime before tests run.
Previous version of the Jenkinsfile would just keep reusing the same image ever time despite changes that might occur

--- a/todo-app/todo-api-java/Jenkinsfile
+++ b/todo-app/todo-api-java/Jenkinsfile
@@ -43,14 +43,21 @@ node {
         IMAGE_SEMVER = "${PROJECT_VERSION}"
     }
     stage('Test') {
-        def projectName = "todoapi${env.BUILD_NUMBER}";
+        def projectName = "todoapi${env.BUILD_NUMBER}"
 
         try {
+            echo "Building Testing container"
+            sh "docker-compose -f $PROJECT_PATH/docker-compose.test.yml -p $projectName build"
+
             echo "Starting integration tests"
             sh "docker-compose -f $PROJECT_PATH/docker-compose.test.yml -p $projectName run -e FAIL_TESTS=false todo-api-test"
         } finally {
             echo "Shutting down docker-compose environment"
-            sh "docker-compose -f $PROJECT_PATH/docker-compose.test.yml -p $projectName down"
+            try {
+                sh "docker-compose -f $PROJECT_PATH/docker-compose.test.yml -p $projectName down"
+            } catch (error) {
+                echo "Error shutting down docker-compose: ${error}"
+            }
         }
     }
 
