--- a/platform/azure-build-server/ansible/build-server.yml
+++ b/platform/azure-build-server/ansible/build-server.yml
@@ -30,7 +30,7 @@
     - { role: geerlingguy.java, java_packages: "java-1.8.0-openjdk", become: yes }
     - { role: geerlingguy.mysql, become: yes }
     - { role: sonar }
-    - { role: geerlingguy.jenkins, jenkins_version: "2.93", jenkins_admin_username: "admin", jenkins_admin_password: "admin", jenkins_plugins: ["git", "build-pipeline-plugin", "blueocean", "kubernetes", "kubernetes-cd", "azure-acs", "sonar"], jenkins_plugins_state: present, become: yes }
+    - { role: geerlingguy.jenkins, jenkins_version: "2.93", jenkins_admin_username: "admin", jenkins_admin_password: "admin", jenkins_plugins: ["git", "build-pipeline-plugin", "blueocean", "kubernetes", "kubernetes-cd", "azure-acs", "sonar", "pipeline-stage-view"], jenkins_plugins_state: present, become: yes }
     - { role: configure-jenkins, become: yes }
     - { role: kubectl, become: yes }
     - { role: docker, become: yes }
