--- a/todo-app/todo-api-java/Jenkinsfile
+++ b/todo-app/todo-api-java/Jenkinsfile
@@ -12,7 +12,9 @@
 */
 
 node {
-    final PROJECT_VERSION = '1.0.0'
+
+    // Major.minor version
+    final PROJECT_VERSION = '1.0'
     final PROJECT_IMAGE_NAME = 'architechbootcamp/todo-api'
     final PROJECT_PATH = 'todo-app/todo-api-java'
 
@@ -36,11 +38,17 @@ node {
                 returnStdout: true
         ).trim()
 
+        GIT_REVISION_COUNT = sh (
+            script: 'git rev-list HEAD --count',
+            returnStdout:true
+        ).trim()
+
         echo "Checked out git commit ${GIT_REVISION}"
 
         // Desclare versions to use in tags later on.
-        IMAGE_FULL_VERSION = "${PROJECT_VERSION}_${GIT_REVISION}"
-        IMAGE_SEMVER = "${PROJECT_VERSION}"
+        IMAGE_SEMVER = "${PROJECT_VERSION}.${GIT_REVISION_COUNT}"
+        IMAGE_FULL_VERSION = "${IMAGE_SEMVER}_${GIT_REVISION}"
+
     }
     stage('Test') {
         def projectName = "todoapi${env.BUILD_NUMBER}"
