--- a/platform/azure-build-server/ansible/build-server.yml
+++ b/platform/azure-build-server/ansible/build-server.yml
@@ -3,6 +3,12 @@
   hosts: all
   vars:
     nginx_port: 80
+  vars_prompt:
+    - name: "admin_username"
+      prompt: "Enter admin username:"
+    - name: "admin_password"
+      prompt: "Enter admin password:"
+      private: yes
   pre_tasks:
   # These two pre_tasks are required to be able to install newer version on MySQL on CentOS 7
   # since SonarQube requires MySQL 5.6+ and CentOS 7 comes with MySQL 5.5
@@ -30,7 +36,7 @@
     - { role: geerlingguy.java, java_packages: "java-1.8.0-openjdk", become: yes }
     - { role: geerlingguy.mysql, become: yes }
     - { role: sonar }
-    - { role: geerlingguy.jenkins, jenkins_version: "2.93", jenkins_admin_username: "admin", jenkins_admin_password: "admin", jenkins_plugins: ["git", "build-pipeline-plugin", "blueocean", "kubernetes", "kubernetes-cd", "azure-acs", "sonar", "pipeline-stage-view"], jenkins_plugins_state: present, become: yes }
-    - { role: configure-jenkins, become: yes }
+    - { role: geerlingguy.jenkins, jenkins_version: "2.93", jenkins_admin_username: "{{ admin_username }}", jenkins_admin_password: "{{ admin_username }}", jenkins_plugins: ["git", "build-pipeline-plugin", "blueocean", "kubernetes", "kubernetes-cd", "azure-acs", "sonar", "pipeline-stage-view"], jenkins_plugins_state: present, become: yes }
+    - { role: configure-jenkins, jenkins_admin_username: "{{ admin_username }}", jenkins_admin_password: "{{ admin_username }}", become: yes }
     - { role: kubectl, become: yes }
     - { role: docker, become: yes }
