--- a/platform/azure-build-server/ansible/roles/configure-jenkins/defaults/main.yml
+++ b/platform/azure-build-server/ansible/roles/configure-jenkins/defaults/main.yml
@@ -3,3 +3,6 @@ jenkins_sonar_token_name: JenkinsSonarToken
 
 sonar_connection_delay: 5
 sonar_connection_retries: 180
+
+jenkins_admin_username: admin
+jenkins_admin_password: admin
