Moved nginx container to docker-compose.override.yml
Moving the nginx container that is meant for development to the docker-compose.override.yml file means that it still comes up during the development cycle when 'docker-compose up' is invoked. However, when merging with docker-compose.build.yml to create and run the todo-ui in a container we no longer have to scale down the nginx container

--- a/todo-app/todo-ui/docker-compose.build.yml
+++ b/todo-app/todo-ui/docker-compose.build.yml
@@ -1,6 +1,6 @@
 # Merge this file with docker-compose to be build and run the todo-ui container
 # `docker-compose -f docker-compose.yml -f docker-compose.build.yml build`
-# `docker-compose -f docker-compose.yml -f docker-compose.build.yml up --scale nginx=0`
+# `docker-compose -f docker-compose.yml -f docker-compose.build.yml up`
 version: "3"
 services:
   todo-ui:
