todo-api now depends on user-api. Docker-compose updated to reflect that.
Also introduced docker-compose.override.yml which are values only used during development (such as setting exposed ports).
docker-compose.test.yml is not a completely standalone docker-compose file, it's required to merge with the default docker-compose.yml similar to how docker-compose.build.yml works.

--- a/todo-app/todo-api-java/docker-compose.build.yml
+++ b/todo-app/todo-api-java/docker-compose.build.yml
@@ -18,3 +18,4 @@ services:
             AD_IDENTITY_META_DATA_URL: https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration=
         depends_on:
             - mongodb
+            - user-api
