--- a/todo-app/manual-k8-deploy/todo-app.yaml
+++ b/todo-app/manual-k8-deploy/todo-app.yaml
@@ -75,7 +75,7 @@ kind: Service
 metadata:
   name: todo-api
 spec:
-  type: LoadBalancer
+  # type: LoadBalancer
   ports:
   - port: 8080
   selector:
