--- a/todo-app/todo-ui/docker-compose.override.yml
+++ b/todo-app/todo-ui/docker-compose.override.yml
@@ -1,5 +1,4 @@
-# Contains services that are only required during development but are not required when running the todo-ui in a
-# container.
+# Development configuration. Automatically picked up on `docker-compose up`
 version: "3"
 services:
     nginx:
@@ -10,3 +9,43 @@ services:
             - ./nginx.conf:/etc/nginx/conf.d/default.conf
         depends_on:
             - todo-api
+    mongodb:
+      ports:
+          - "27017:27017"
+      volumes:
+          - "todo-app-data:/data/db"
+          - "todo-app-config-data:/data/config"
+    todo-api:
+      ports:
+          - "8080:8080"
+      environment:
+          MONGODB_URL: mongodb:27017
+          SPRING_LOG_LEVEL: INFO
+          APP_LOG_LEVEL: DEBUG
+#            ALLOWED_ORIGINS: '*'
+          AZURE_APP_ID: 'ADD APP ID HERE'
+          AD_IDENTITY_META_DATA_URL: https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration=
+    user-api-mongodb:
+      ports:
+          - "27018:27017"
+      volumes:
+          - "user-api-data:/data/db"
+          - "user-api-config-data:/data/config"
+    user-api:
+      ports:
+        - "8082:8082"
+      environment:
+        IS_TEST_MODE: "${TEST_MODE:-false}"
+        MONGODB_URL: "mongodb://user-api-mongodb:27017/user-api"
+        LOG_LEVEL: "info"
+        AZURE_IDENTITY_META_DATA: "https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration"
+        AZURE_CLIENT_ID: ${AZURE_APP_ID}
+volumes:
+    todo-app-data:
+        external: false
+    todo-app-config-data:
+        external: false
+    user-api-data:
+        external: false
+    user-api-config-data:
+        external: false
