--- a/todo-app/todo-ui/docker-compose.yml
+++ b/todo-app/todo-ui/docker-compose.yml
@@ -8,23 +8,20 @@ services:
             - "todo-app-data:/data/db"
             - "todo-app-config-data:/data/config"
 
+    user-api-mongodb:
+        image: mongo
+
+    user-api:
+      build:
+          context: ../user-api
+      image: user-api
+      depends_on:
+        - user-api-mongodb
+
     todo-api:
         build:
             context: ../todo-api-java
         image: todo-api
-        ports:
-            - "8080:8080"
-        environment:
-            MONGODB_URL: mongodb:27017
-            SPRING_LOG_LEVEL: INFO
-            APP_LOG_LEVEL: DEBUG
-#            ALLOWED_ORIGINS: '*'
-            AZURE_APP_ID: 'ADD APP ID HERE'
-            AD_IDENTITY_META_DATA_URL: https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration=
         depends_on:
             - mongodb
-volumes:
-    todo-app-data:
-        # external: true
-    todo-app-config-data:
-        # external: true
+            - user-api
