--- a/todo-app/todo-ui/nginx.conf
+++ b/todo-app/todo-ui/nginx.conf
@@ -12,6 +12,12 @@ server {
         proxy_redirect default;
     }
 
+    location /api/user/ {
+        proxy_pass http://user-api:8082/api/user/;
+        proxy_set_header Host $host;
+        proxy_redirect default;
+    }
+
     location / {
         try_files $uri /index.html = 404;
     }
