Fixed yml formatting to match .editorconfig.
Unfortunately no IDE wanted to reformat YML files so we used a pretty printer which also changed all of the double quotes to single quotes for some reason.

--- a/todo-app/todo-api-java/docker-compose.yml
+++ b/todo-app/todo-api-java/docker-compose.yml
@@ -1,15 +1,12 @@
-version: "3"
+version: '3'
 services:
-    mongodb:
-        image: mongo
-
-    user-api-mongodb:
-        image: mongo
-
-    user-api:
-      build:
-          context: ../user-api
-      image: user-api
-      depends_on:
-        - user-api-mongodb
-
+  mongodb:
+    image: mongo
+  user-api-mongodb:
+    image: mongo
+  user-api:
+    build:
+      context: ../user-api
+    image: user-api
+    depends_on:
+      - user-api-mongodb
