--- a/todo-app/todo-ui/docker-compose.yml
+++ b/todo-app/todo-ui/docker-compose.yml
@@ -1,27 +1,24 @@
-version: "3"
+version: '3'
 services:
-    mongodb:
-        image: mongo
-        ports:
-            - "27017:27017"
-        volumes:
-            - "todo-app-data:/data/db"
-            - "todo-app-config-data:/data/config"
-
-    user-api-mongodb:
-        image: mongo
-
-    user-api:
-      build:
-          context: ../user-api
-      image: user-api
-      depends_on:
-        - user-api-mongodb
-
-    todo-api:
-        build:
-            context: ../todo-api-java
-        image: todo-api
-        depends_on:
-            - mongodb
-            - user-api
+  mongodb:
+    image: mongo
+    ports:
+      - '27017:27017'
+    volumes:
+      - 'todo-app-data:/data/db'
+      - 'todo-app-config-data:/data/config'
+  user-api-mongodb:
+    image: mongo
+  user-api:
+    build:
+      context: ../user-api
+    image: user-api
+    depends_on:
+      - user-api-mongodb
+  todo-api:
+    build:
+      context: ../todo-api-java
+    image: todo-api
+    depends_on:
+      - mongodb
+      - user-api
