--- a/todo-app/todo-api-java/Jenkinsfile
+++ b/todo-app/todo-api-java/Jenkinsfile
@@ -2,6 +2,7 @@
  Required Plugins:
   - Environment Injector Plugin
    -- Add `GIT_BRANCH=some/branch` when testing pipeline script directly in Jenkins
+   -- Add `PROD_KUBECTL_CONTEXT=myContenxt` where 'mycontext' is the name of the kubectl context to access the production cluster
  Required Credentials:
   - `docker-hub-credentials` : Username and password for docker hub
   - `scm-credentials` : SSH username (git) and private key to access git. Used when testing pipeline script directly in Jenkins
@@ -46,18 +47,10 @@ node {
 
         echo "Checked out git commit ${GIT_REVISION}"
 
-        // Desclare versions to use in tags later on.
+        // Declare versions to use in tags later on.
         IMAGE_SEMVER = "${PROJECT_VERSION}.${GIT_REVISION_COUNT}"
         IMAGE_FULL_VERSION = "${IMAGE_SEMVER}_${GIT_REVISION}"
 
-        OLD_IMAGE_VERSION_QA = sh(
-            script: "/usr/local/bin/kubectl get deployment/\${DEPLOYMENT_NAME} --namespace=qa-env -o wide | awk '{ if (NR!=1) {print \$8}}' | cut -d ':' -f 2",
-            returnStdout: true
-        ).trim()
-        OLD_IMAGE_VERSION_PROD = sh(
-            script: "/usr/local/bin/kubectl get deployment/\${DEPLOYMENT_NAME} --namespace=prod-env -o wide | awk '{ if (NR!=1) {print \$8}}' | cut -d ':' -f 2",
-            returnStdout: true
-        ).trim()
     }
     stage('Test') {
         def projectName = "todoapi${env.BUILD_NUMBER}"
@@ -93,23 +86,15 @@ node {
         }
     }
 
-    stage('Deploy to QA') {
-        sh "/usr/local/bin/kubectl set image deployment/${DEPLOYMENT_NAME} ${DEPLOYMENT_NAME}=${PROJECT_IMAGE_NAME}:${IMAGE_FULL_VERSION} --namespace=qa-env"
-    }
-
     stage('QA Test') {
         echo "Spawning Job to run functional testing on all components in QA environment"
-        try {
-            build job: 'QA-Tests',
-                    parameters:
-                            [
-                                    string(name: 'imageName', value: PROJECT_IMAGE_NAME),
-                                    string(name: 'imageVersion', value: QA_IMAGE_FULL_VERSION)
-                            ]
-        } catch (error) {
-            //TODO: Rollback QA deployment here ?
-            sh "/usr/local/bin/kubectl set image deployment/${DEPLOYMENT_NAME} ${DEPLOYMENT_NAME}=${PROJECT_IMAGE_NAME}:${OLD_IMAGE_VERSION_QA} --namespace=qa-env"
-        }
+        build job: 'QA-Tests',
+            parameters:
+                [
+                        string(name: 'imageName', value: PROJECT_IMAGE_NAME),
+                        string(name: 'imageVersion', value: QA_IMAGE_FULL_VERSION)
+                ]
+
     }
 
     stage('Prod Image Push') {
@@ -125,13 +110,16 @@ node {
 
     stage('Deploy to Prod') {
         input 'Push to Production?'
-        //TODO: Push to production
-        sh "/usr/local/bin/kubectl set image deployment/${DEPLOYMENT_NAME} ${DEPLOYMENT_NAME}=${PROJECT_IMAGE_NAME}:${IMAGE_FULL_VERSION} --namespace=prod-env"
+        OLD_IMAGE_VERSION_PROD = sh(
+            script: "/usr/local/bin/kubectl --context=${PROD_KUBECTL_CONTEXT} get deployment/\${DEPLOYMENT_NAME} --namespace=prod-env -o wide | awk '{ if (NR!=1) {print \$8}}' | cut -d ':' -f 2",
+            returnStdout: true
+        ).trim()
+        sh "/usr/local/bin/kubectl --context=${PROD_KUBECTL_CONTEXT} set image deployment/${DEPLOYMENT_NAME} ${DEPLOYMENT_NAME}=${PROJECT_IMAGE_NAME}:${IMAGE_FULL_VERSION} --namespace=prod-env"
     }
 
     stage('Roll back Prod') {
         input 'Roll back Production?'
-        sh "/usr/local/bin/kubectl set image deployment/${DEPLOYMENT_NAME} ${DEPLOYMENT_NAME}=${PROJECT_IMAGE_NAME}:${OLD_IMAGE_VERSION_PROD} --namespace=qa-env"
+        sh "/usr/local/bin/kubectl --context=${PROD_KUBECTL_CONTEXT} set image deployment/${DEPLOYMENT_NAME} ${DEPLOYMENT_NAME}=${PROJECT_IMAGE_NAME}:${OLD_IMAGE_VERSION_PROD} --namespace=qa-env"
     }
 
 }
