--- a/todo-app/todo-api-java/Jenkinsfile
+++ b/todo-app/todo-api-java/Jenkinsfile
@@ -12,12 +12,12 @@
 */
 
 // Major.minor version
-final PROJECT_VERSION = '1.0'
-final PROJECT_IMAGE_NAME = 'architechbootcamp/todo-api'
-final PROJECT_PATH = 'todo-app/todo-api-java'
-final DEPLOYMENT_NAME = 'todo-api'
-final QA_NAMESPACE = 'qa-env'
-final PROD_NAMESPACE = 'prod-env'
+PROJECT_VERSION = '1.0'
+PROJECT_IMAGE_NAME = 'architechbootcamp/todo-api'
+PROJECT_PATH = 'todo-app/todo-api-java'
+DEPLOYMENT_NAME = 'todo-api'
+QA_NAMESPACE = 'qa-env'
+PROD_NAMESPACE = 'prod-env'
 
 node {
 
