--- a/todo-app/todo-api-java/docker-compose.build.yml
+++ b/todo-app/todo-api-java/docker-compose.build.yml
@@ -15,7 +15,7 @@ services:
       APP_LOG_LEVEL: DEBUG
       ALLOWED_ORIGINS: '*'
       AZURE_APP_ID: 'ADD APP ID HERE'
-      AD_IDENTITY_META_DATA_URL: 'https://login.microsoftonline.com/architech.onmicrosoft.com/v2.0/.well-known/openid-configuration='
+      AZURE_CLIENT_SECRET: 'ADD AZURE CLIENT SECRET HERE'
     depends_on:
       - mongodb
       - user-api
