--- a/bootcamp/day1/solutions/exercise3/stock-quote-service.yml
+++ b/bootcamp/day1/solutions/exercise3/stock-quote-service.yml
@@ -1,4 +1,6 @@
-# Create a docker image that contains a service that integrates with the following stock quote API - https://api.iextrading.com/1.0/stock/aapl/quote.  You can use any technology you wish.
+# Create a docker image that contains a service that integrates with the 
+# following stock quote API - https://api.iextrading.com/1.0/stock/aapl/quote.  
+# You can use any technology you wish.
 # Tag the image and push it to DockerHub or Azure Container Service
 # Deploy to K8S and test through a browser or curl
 # Bonus: Implement your service so that you can pass any stock symbol as query string parameter.
