--- a/services/random-quote-api/Dockerfile
+++ b/services/random-quote-api/Dockerfile
@@ -3,4 +3,5 @@ FROM scratch
 ADD ca-certificates.crt /etc/ssl/certs/
 ADD main /
 ENV RANDOM_QUOTE_SERVICE "quotes.rest"
+EXPOSE 8000
 CMD ["/main"]
