--- a/services/pod-details-service.yml
+++ b/services/pod-details-service.yml
@@ -7,7 +7,7 @@
 # Get the service 'kubectl get service/pod-details'
 # You will see that the external IP is 'pending'.  
 # Wait until the external IP and port is provided.  
-# run curl http://ip:port and you will see details of the pod that fulfilled the request.
+# run curl http://ip:port/pod-details and you will see details of the pod that fulfilled the request.
 
 kind: Service
 apiVersion: v1
